--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,3 +13,38 @@ body {
 img{
     width: 100px;
 }
+
+.memory-game{
+    width: 640px;
+    height: 640px;
+    display: flex;
+    margin: auto;
+    flex-wrap: wrap;
+    border: 2px solid lime;
+}
+
+.memory-card{
+    
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    position: relative;
+    margin: 5px;
+    transform: scale 1;
+}
+
+.memory-card:active{
+    transform: scale(.97);
+    transition: transform .2s;
+}
+
+
+.front,
+.back {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: green;
+    border: 2px solid black;
+}
