--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,7 +15,7 @@ body {
 img{
     width: 100px;
 }
-
+/*--------------------------------Container With Heading-------------------------------*/
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -57,7 +57,7 @@ img{
 	display: inline-block;
 	margin: 0 1rem;
 }
-/*--------------------------------Memory Game-------------------------------*/
+/*-------------------------------------Memory Game-------------------------------*/
 .memory-game{
     width: 640px;
     height: 640px;
@@ -66,7 +66,7 @@ img{
     perspective: 1000px;
    
 }
-/*-----------------------------------Cards-------------------------------*/
+/*--------------------------------------------Cards-------------------------------*/
 .memory-card{
     
     width: calc(25% - 10px);
@@ -104,14 +104,82 @@ img{
   transform: rotateY(180deg);
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
+/*--------------------------------------------Modal-------------------------------*/
+.overlay {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(0, 0, 0, 0.7);
+	transition: opacity 500ms;
+	visibility: hidden;
+	opacity: 0;
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
-    
+.overlay:target {
+	visibility: visible;
+	opacity: 1;
+}
+  
+.popup {
+	margin: 70px auto;
+	padding: 20px;
+	background: #ffffff;
+	border-radius: 5px;
+	width: 85%;
+	position: relative;
+	transition: all 5s ease-in-out;
+	font-family: 'Indie Flower', cursive;
+}
+  
+.popup h2 {
+	margin-top: 0;
+	color: #333;
+	font-family: 'Indie Flower', cursive;
+}
+
+.popup .close {
+	position: absolute;
+	top: 20px;
+	right: 30px;
+	transition: all 200ms;
+	font-size: 30px;
+	font-weight: bold;
+	text-decoration: none;
+	color: #333;
+}
+
+.popup .close:hover {
+	color: #E5F720;
+}
+
+.popup .content-1,
+.content-2 {
+	max-height: 30%;
+	overflow: auto;
+	text-align: center;
+}
+
+.show {
+	visibility: visible !important;
+	opacity: 100 !important;
+}
+
+#starRating li {
+	display: inline-block;
+}
+
+#play-again {
+	background-color: #141214;
+	padding: 0.7rem 1rem;
+	font-size: 1.1rem;
+	display: block;
+	margin: 0 auto;
+	width: 50%;
+	font-family: 'Indie Flower', cursive;
+	color: #ffffff;
+	border-radius: 5px;
 }
 
 
