Added congratulations, closeModal and playAgain functions in scripts.js and uncommented modal sections in styles.css and index.html

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -104,7 +104,7 @@ img{
   transform: rotateY(180deg);
 }
 
-/*--------------------------------------------Modal
+/*--------------------------------------------Modal-------------------*/
 .overlay {
 	position: fixed;
 	top: 0;
@@ -181,6 +181,6 @@ img{
 	color: #ffffff;
 	border-radius: 5px;
 }
--------------------------------*/
+
 
 
