--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,7 +22,7 @@ img{
 	justify-content: center;
 	align-items: center;
     flex-direction: column;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Indie Flower', sans-serif;
     color: #FFD700;
     text-shadow: 2px 2px #ff8800;	
 }
