--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,6 +14,7 @@ body {
 
 h1{
   font-size: xx-large;
+  display: flex;
 }
 
 img{
@@ -23,7 +24,6 @@ img{
 .container {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
     flex-direction: column;
@@ -189,3 +189,21 @@ img{
 	border-radius: 5px;
 }
 
+@media only screen and (max-width: 700px) {
+    .memory-game{
+        width: 100%;
+        height: 20rem;  
+    }
+       
+    .container{
+        font-size: xx-small;
+    }
+
+    header{
+        text-align: center;
+    }
+
+    h1{
+        font-size: 1.5rem;
+    }
+}
