--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,39 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  display: flex;
-  background: rgb(71, 175, 235);
+	height: 100vh;
+	display: flex;
+	background: rgb(71, 175, 235);
 }
 
-h1{
-  font-size: xx-large;
-  display: flex;
+h1 {
+	font-size: xx-large;
+	display: flex;
 }
 
-img{
-    width: 100px;
+img {
+	width: 100px;
 }
+
+
 /*--------------------------------Container With Heading-------------------------------*/
+
 .container {
-    width: 100%;
-    display: flex;
+	width: 100%;
+	display: flex;
 	justify-content: center;
 	align-items: center;
-    flex-direction: column;
-    font-family: 'Indie Flower', sans-serif;
-    color: #FFD700;
-    text-shadow: 2px 2px #ff8800;	
+	flex-direction: column;
+	font-family: 'Indie Flower', sans-serif;
+	color: #FFD700;
+	text-shadow: 2px 2px #ff8800;
 }
 
 
 /*--------------------------------Score Panel-------------------------------*/
+
 .score-panel {
 	text-align: left;
 	margin-bottom: 10px;
@@ -53,7 +56,7 @@ img{
 
 .score-panel .restart {
 	float: right;
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .fa-star {
@@ -64,54 +67,58 @@ img{
 	display: inline-block;
 	margin: 0 1rem;
 }
+
+
 /*-------------------------------------Memory Game-------------------------------*/
-.memory-game{
-    width: 640px;
-    height: 640px;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
-   
+
+.memory-game {
+	width: 640px;
+	height: 640px;
+	display: flex;
+	flex-wrap: wrap;
+	perspective: 1000px;
 }
+
+
 /*--------------------------------------------Cards-------------------------------*/
-.memory-card{
-    
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
-    margin: 5px;
-    position: relative;
-    transform: scale 1;
-    transform-style: preserve-3d;
-    transition: transform .5s;
-    
+
+.memory-card {
+	width: calc(25% - 10px);
+	height: calc(33.333% - 10px);
+	margin: 5px;
+	position: relative;
+	transform: scale(1) ;
+	transform-style: preserve-3d;
+	transition: transform .5s;
 }
 
-.memory-card:active{
-    transform: scale(.97);
-    transition: transform .2s;
+.memory-card:active {
+	transform: scale(.97);
+	transition: transform .2s;
 }
 
-.memory-card.flip{
-    transform: rotateY(180deg);
-
+.memory-card.flip {
+	transform: rotateY(180deg);
 }
-
 
 .front,
 .back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border-radius: 5px;;
-    backface-visibility: hidden;
-    border: 2px solid black;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border-radius: 5px;
+	;
+	backface-visibility: hidden;
+	border: 2px solid black;
 }
 
 .front {
-  transform: rotateY(180deg);
+	transform: rotateY(180deg);
 }
 
+
 /*--------------------------------------------Modal-------------------*/
+
 .overlay {
 	position: fixed;
 	top: 0;
@@ -128,7 +135,7 @@ img{
 	visibility: visible;
 	opacity: 1;
 }
-  
+
 .popup {
 	margin: 70px auto;
 	padding: 20px;
@@ -139,7 +146,7 @@ img{
 	transition: all 5s ease-in-out;
 	font-family: 'Indie Flower', cursive;
 }
-  
+
 .popup h2 {
 	margin-top: 0;
 	color: #333;
@@ -190,20 +197,17 @@ img{
 }
 
 @media only screen and (max-width: 700px) {
-    .memory-game{
-        width: 100%;
-        height: 20rem;  
-    }
-       
-    .container{
-        font-size: xx-small;
-    }
-
-    header{
-        text-align: center;
-    }
-
-    h1{
-        font-size: 1.5rem;
-    }
+	.memory-game {
+		width: 100%;
+		height: 20rem;
+	}
+	.container {
+		font-size: xx-small;
+	}
+	header {
+		text-align: center;
+	}
+	h1 {
+		font-size: 1.5rem;
+	}
 }
